--- a/storage.html
+++ b/storage.html
@@ -7,48 +7,42 @@
 </head>
 <body>
     <script>
-        // Quantifiers specify how many times a character or group should appear.
-        let text="aabab";
-        let pattern=/\a*/g;
-        let pattern2=/\a+/g;
-        let pattern3=/\a?/g;
-        let result=text.match(pattern);
-        let result2=text.match(pattern2);
-        let result3=text.match(pattern3);
-        console.log(result)
-        console.log(result2)
-        console.log(result3)
-        // Modifiers(flags) change how regex matches.
-        //COMMON MODIFIERS
-        // i=>case insensitive
-        //g=>global match(all occurences)
-        //m=>multiline match
-        let sentence="Hai Everyone\n Hai, How about you."
-        let pattern4=/\hai+/ig;
-        let result5=sentence.match(pattern4);
-        console.log(result5);
-        // Meta characters have special meaning in regex.
-        // Common Meta Characters:
-        // .->any character except new line
-        //  \d->digit(0-9)
-        // \w->word characters(letters,digits,_)
-        let digitchar="Js001";
-        let pattern6=/\d+\w+/g;
-        let result6=digitchar.match(pattern6);
-        console.log(result6);
-        //Grouping
-        //Parentheses() are udes to group patterns and capture submatches.
-        let username="javascript programming";
-        let pattern7=/(\w+)/g;
-        let result7=username.match(pattern7);
-        console.log(result7);
-        console.log(result7[0]);
-        console.log(result7[1]);
-        let str ="Mr. bean has a grren apple and red apple";
-        const regex = /Apple/ig;
-        let result = str.replace(regex,"Strawberries");
-        console.log(result);
+        //Local Storage->stores data permanently
+        //(until cleared by user and code).
+        localStorage.setItem("username","javascript");
+        localStorage.getItem("username");
+        localStorage.removeItem("username");
+        localStorage.clear();
+        //storing array value in ls:
+        //Local storage only stores strings,not arrays.
+        //We need to convert arrays into a string(using JSON.stringify)
+        // Creating an empty array
+        // let emptyArray = [];
+        // let fruits = ["Apple", "Banana", "Orange"];
+        // let numbers = [1, 2, 3, 4, 5];
+        // console.log(fruits);
+        var arr=["sadha",19,"front hand developer"];
+        localStorage.setItem("details",JSON.stringify(arr))
+        let stredarr=JSON.parse(localStorage.getItem("details"))
+        console.log(stredarr);
+        localStorage.clear()
+        //Storing an array of objects in LocalStorage
+        const person = [{
+        "name 1":"sadha",
+        "name 2":"dharsh"
+        }]
+        localStorage.setItem("persondetails",JSON.stringify(person));
+        let stredobj=JSON.parse(localStorage.getItem("persondetails"));
+        console.log(stredobj);
+        //session storage
+        //useful for temporary data
+        //(like login,session,form pogress)
+        // Store a value in sessionStorage
+sessionStorage.setItem("fruits", "apple");
+const fruit = sessionStorage.getItem("fruits");
+console.log(fruit);
+
+    
     </script>
 </body>
-
 </html>
